fixed tapping causing highlights on mobile

--- a/web/global-styles.css
+++ b/web/global-styles.css
@@ -79,6 +79,8 @@ body {
 }
 * {
     box-sizing: border-box;
+    -webkit-tap-highlight-color: transparent;
+    
 }
 
 input {
